--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -36,8 +36,8 @@ a solution, whether or not the target is actually hit. This can be seen in
 The representation is a piece of knowledge from the representation
 scheme. The representation scheme is used to make sure the individual
 representations are detailed and close to the problem, such that the necessary
-knowledge can be used to solve said problem \citep{MIBook}. Examples of
-knowledge that \name has is: the targets speed and how much the turret has
+knowledge can be used to solve said problem \fix{\citep{MIBook}}{what pages?}.
+Examples of knowledge that \name has is: the targets speed and how much the turret has
 turned. When the turret has a sufficient amount of knowledge, it should be used
 in a way that makes it possible to compute an output. Whether this output is a
 solution or not, depends on what a solution is. There are 4 different categories
@@ -62,8 +62,8 @@ optimal shot.
 
 \subsection{Design Space}
 The design space of an intelligent agent can be considered a series of 8
-factors, which are used to give an estimation of the system \citep[Ch.
-1.5]{MIBook}. These factors are: modularity, representation scheme, planning
+factors, which are used to give an estimation of the system \citep[ch.
+1.5]{MIBook}\KT. These factors are: modularity, representation scheme, planning
 horizon, uncertainty, preference, number of agents, learning and computational
 limits.
 
