--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -248,7 +248,7 @@ evidence on a node.
   possible to say anything new about first node given more evidence further down
   the sequence. An example of a serial connection can be seen in
   \autoref{Serial2}.
- \figx[0.8]{Serial2}{A serial connetion with evidence on the middle node}
+ \figx[0.8]{Serial2}{An example of a serial connection}
   \item A \textbf{convergent} connection consists of a child node with two or
   more parents. In this connection the absence of evidence on the child node, or
   one of its descendants, makes it impossible to transmit information between
@@ -256,13 +256,12 @@ evidence on a node.
   its descendants, it is possible to transmit evidence between the
   parent nodes. An example of a convergent connection can be seen in
  \autoref{Convergent2}.
- \figx[0.8]{Convergent2}{A convergent connection with no evidece on the
- child node}
+ \figx[0.8]{Convergent2}{An example of convergent connection}
   \item A \textbf{divergent} connection is a parent node connected to two or
   more children. In this kind of connection it is only possible to transmit
   information between the children if the parent node has evidence. An
   example of a divergent connection can be seen in \autoref{Divergent2}.
- \figx[0.8]{Divergent2}{A divergent connection with evidence on the parent node}
+ \figx[0.8]{Divergent2}{An example of a divergent connection}
 \end{itemize}
 
 The independence assumption \citep[p.240]{MIBook} says:
