--- a/sections/Design/Design.tex
+++ b/sections/Design/Design.tex
@@ -1,4 +1,4 @@
-\chapter{Mechanical Design}
+\chapter{Mechanical Design}\label{MechDesign}
 
 This chapter presents the final design of the turret and describes how the lego
 was tinkered with and how this process lead to the this design.
