--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -1,4 +1,8 @@
 \chapter{Implementation}
-something, something\ldots
+Following the turret design in \autoref{MechDesign} and the design of the system
+architecture in \autoref{SysArch} this chapter will be used to present and
+describe the final implementation of the software used in the \name turret. This will be done
+by looking at the main system components, and the individual programmed threads.
 
-\input{sections/Implementation/ImplOverview.tex}
+\input{sections/Implementation/NXCLang.tex}
+\input{sections/Implementation/Tracking.tex} 
