--- a/sections/Design/SystemArch.tex
+++ b/sections/Design/SystemArch.tex
@@ -1,4 +1,4 @@
-\chapter{System Architecture}
+\chapter{System Architecture}\label{SysArch}
 In the previous chapter the physical design of the turret was presented and
 explained. As such, this chapter will be used to present the technical aspects
 of the turret design, namely the system architecture. This chapter will be split
