--- a/sections/Implementation/NXCLang.tex
+++ b/sections/Implementation/NXCLang.tex
@@ -31,4 +31,4 @@ task search(){
 
 As excemplified in \autoref{NXCExample} the NXC language is reminicent of C, and
 the most notable differences come in the form of the inclusion of standard
-libraries, and specialized thread handling.
+libraries, and specialized thread handling in the form of tasks.
