--- a/sections/Design/Design.tex
+++ b/sections/Design/Design.tex
@@ -7,3 +7,4 @@ Finally the thoughts that went into the design of the target will be discussed.
 \input{sections/Design/TurretDesign.tex}
 \input{sections/Design/TargetDesign.tex}
 \input{sections/Design/RepresentationScheme.tex}
+\input{sections/Design/SystemArchitecture/SystemArch.tex}
