--- a/sections/Design/Design.tex
+++ b/sections/Design/Design.tex
@@ -1,10 +1,10 @@
 \chapter{Mechanical Design}\label{MechDesign}
 
-This chapter presents the final design of the turret and describes how the lego
+This chapter presents the final design of the turret, describes how the lego
 was tinkered with and how this process lead to the this design.
 Finally the thoughts that went into the design of the target will be discussed.
 
-\input{sections/Design/TurretDesign.tex}
-\input{sections/Design/TargetDesign.tex}
+\input{sections/Design/TnTDesign/TurretDesign.tex}
+\input{sections/Design/TnTDesign/TargetDesign.tex}
 \input{sections/Design/RepresentationScheme.tex}
 \input{sections/Design/SystemArchitecture/SystemArch.tex}
