--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -35,9 +35,19 @@ The requirements can therefore differ alot between systems, although they do
 share some characteristics \citep[ch.1.1]{vahid1999embedded}:
 
 \begin{enumerate}
-  \item \textbf{Single-functioned}:Most embedded systems only have a single purpose, running the same program over and over again. An example could be a washing machine. The computer inside it will always have the same function(control the washing machine), and although it might have a variety of different programs to execute(wool, synthetics, different temperatures) it is still considered single-functioned. On the other hand a desktop pc allows the user to install a variety of different programs, and does not have a universal single purpose.
-  \item \textbf{Tightly constrained}: All systems have some limits, but
-  embedded systems are much more tightly constrained when it comes to cost,
-  size, performance and power. These are to be understood as a compromise between the different aspects, for example it could be impossible to make the embedded system smaller without making it more expensive. 
-  \item \textbf{Reactive and real-time}: If an embedded system has to react and respond to external stimuli it is considered a real-time system. We will further expand upon what this means in \autoref{rts}.
+  \item \textbf{Single-functioned}: Most embedded systems only have a single
+  purpose, running the same program over and over again. An example could be a
+  washing machine. The computer inside it will always have the same
+  function(control the washing machine), and although it might have a variety of
+  different programs to execute(wool, synthetics, different temperatures) it is
+  still considered single-functioned.
+  \item \textbf{Tightly constrained}: All systems have some limits, but embedded
+  systems are much more tightly constrained when it comes to cost, size,
+  performance and power. These are to be understood as a compromise between the
+  different aspects, for example it could be impossible to make the embedded
+  system smaller without making it more expensive.
+  \item \textbf{Reactive and real-time}: If an embedded system has to react and
+  respond to external stimuli it is considered a real-time system. We will
+  further expand upon what this means in \autoref{rts}\fix{}{how is the flow of
+  this}.
 \end{enumerate}
