Properly quote the god damn definition of embedded systems

--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -13,11 +13,10 @@ As explained by the embedded systems manufacturer BarrGroup
 
 \begin{center}
 \begin{minipage}{0.8\linewidth}
-\textit{A combination of computer hardware and software, and perhaps additional
+\say{A combination of computer hardware and software, and perhaps additional
 mechanical or other parts, designed to perform a dedicated function. In some
 cases, embedded systems are part of a larger system or product, as in the case
-of an antilock braking system in a car.} \fix{}{How do we explict state that
-this is not our text	}
+of an antilock braking system in a car.}
 \end{minipage}
 \end{center}
 % An embedded system is a device with limited resources both in terms of computing
