--- a/sections/Implementation/Tracking.tex
+++ b/sections/Implementation/Tracking.tex
@@ -1,1 +1,5 @@
 \section{Tracking}
+The first main thread of the program is Track(), which is responsible for using
+the NXTCam to track a target. As described in \autoref{}, the camera is capable
+of identifying blobs of a given colour, and then output data relating to where
+in the cameras field of view the object is located. 
