--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -2,7 +2,9 @@
 Following the turret design in \autoref{MechDesign} and the design of the system
 architecture in \autoref{SysArch} this chapter will be used to present and
 describe the final implementation of the software used in the \name turret. This will be done
-by looking at the main system components, and the individual programmed threads.
+by looking at the main system components and the three main program threads:
+tracking, distance measurement and fireing.
 
 \input{sections/Implementation/NXCLang.tex}
-\input{sections/Implementation/Tracking.tex} 
+\input{sections/Implementation/SoftwareHierachy.tex}
+\input{sections/Implementation/Tracking.tex}
