--- a/setup/preamble.tex
+++ b/setup/preamble.tex
@@ -201,6 +201,10 @@
   morecomment  = [is]{/*}{*/}
 }
 
+\lstdefinestyle{nc}%
+{
+}
+
 \lstset{ %
   backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
   basicstyle=\scriptsize,        % the size of the fonts that are used for the
