--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -28,13 +28,14 @@ computed into a suitable output which in turn can be interpreted as
 a solution, whether or not the target is actually hit. This can be seen in
 \autoref{MIRep}.
 
-\figx[0.8]{MIRep}{An illustration of how a problem is converted into a solution
-\citep[ch. 1.4]{MIBook}}
+\figxs[0.8]{MIRep}{An illustration of how a problem is converted into a
+solution}{\citep[ch. 1.4 p.12]{MIBook}}
 
 The representation is a piece of knowledge from the representation
 scheme. The representation scheme is used to make sure the individual
 representations are detailed and close to the problem, such that the necessary
-knowledge can be used to solve said problem \citep[ch.1.4.1]{MIBook}.
+knowledge can be used to solve said problem \fix{\citep[ch.1.4.1]{MIBook}}{Not
+the right ch?}.
 Examples of knowledge that \name has is: the targets speed and how much the turret has
 turned. When the turret has a sufficient amount of knowledge, it should be used
 in a way that makes it possible to compute an output. Whether this output is a
