--- a/sections/Implementation/Tracking.tex
+++ b/sections/Implementation/Tracking.tex
@@ -1,7 +1,7 @@
 \section{Tracking}
 The first main thread of the program is Track(), which is responsible for using
-the NXTCam to track a target. As described in \autoref{}, the camera is capable
-of identifying blobs of a given colour, and then output data relating to where
+the NXTCam to track a target. As described in \autoref{SensorTheory}, the camera
+is capable of identifying blobs of a given colour, and then output data relating to where
 in the cameras field of view the object is located.\nl
 
 Whenever the camera registers a target, it returns data specifying the position
@@ -128,7 +128,13 @@ DetermineDirection(blobCenter, oldBlobCenter, directionCount);
 \end{minipage}
 
 When the \textbf{\textit{DetermineDirection}} method is called, it checks
-whether or not a direction has already been determined. Assuming no 
+whether or not a direction has already been determined. Whenever a blob is
+registered by the camera, it is determined in what direction the blob has
+moved. This is done on \textbf{lines 3-7} where the center of the
+current blob is compared to the old one. When the blob moves in a given
+direction \textbf{\textit{directionCount}} is either incremented or decremented.
+When this variable reaches a certain positive/negative threshold, the direction
+is determined.
 
 \begin{minipage}[H]{\linewidth}
 \begin{lstlisting}[caption = Determine the targets direction., label = DeterDir]
@@ -150,5 +156,26 @@ void DetermineDirection(int center, int oldCenter, int &directionCount){
 }
 \end{lstlisting}
 \end{minipage}
+
+Aside from determining the direction, the turret also needs to determine at
+which speed it should rotate to match the target. This is calculated in the
+\textbf{\textit{GetSpeed method}}, as shown in \autoref{GetZeSpeed}. This method
+takes the pixel count between the center of the camera and the blob, and outputs
+the resulting rotating speed. The sine function maps the 144 pixel width of the
+camera to 90 degrees for a sine function. This way the speed should follow a
+sine curve, and as such should get slower the closer to the target, and faster
+the farther away.
+
+\begin{minipage}[H]{\linewidth}
+\begin{lstlisting}[caption = Determine speed to rotate using a sine function, label = GetZeSpeed] 
+float GetSpeed(int bcenter){
+    int length = bcenter - CAM_CENTER;
+    float lib_speed = sind(1.25*length)*100;
+    return lib_speed;
+}
+\end{lstlisting}
+\end{minipage}
+
+
 
 
