--- a/sections/Implementation/Tracking.tex
+++ b/sections/Implementation/Tracking.tex
@@ -176,6 +176,7 @@ float GetSpeed(int bcenter){
 \end{lstlisting}
 \end{minipage}
 
-
-
-
+In conclusion, the tracking phase consists of reading input from the camera, and
+using this data to track the target. This is done by determining the targets
+direction, and using a sine function to map the pixel-difference in blob
+positions to a respective rotational speed.
