--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -7,4 +7,6 @@ tracking, distance measurement and fireing.
 
 \input{sections/Implementation/NXCLang.tex}
 \input{sections/Implementation/SoftwareHierachy.tex}
+\input{sections/Implementation/Main.tex}
 \input{sections/Implementation/Tracking.tex}
+\input{sections/Implementation/GetDataAndCalculate.tex}
