--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -92,11 +92,11 @@
   }
 }
 
-
-
 \newcommand{\name}{TS101\ }
 
 \newcommand{\say}[1]{\textit{``#1''}} 
+
+\newcommand{\textc}[1]{\textbf{\textit{``#1''}}} 
 
 \newcommand{\names}{TS101s\
 }
