--- a/sections/Implementation/Implementation.tex
+++ b/sections/Implementation/Implementation.tex
@@ -9,4 +9,6 @@ tracking, distance measurement and fireing.
 \input{sections/Implementation/SoftwareHierachy.tex}
 \input{sections/Implementation/Main.tex}
 \input{sections/Implementation/Tracking.tex}
+\input{sections/Implementation/WaitAndFire.tex}
 \input{sections/Implementation/GetDataAndCalculate.tex}
+
