--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -4,65 +4,65 @@ shooting mechanism, the base and the sensor placement. These 3 parts of the
 turret not only has to work on their own, but also come together as a whole.\nl
 
 The final design of the turret uses a shooting mechanism with a piston
-that pushes the projectile through a mouthpiece that clamps around it. It also has an angeling mechanism
-that the shooting mechanism is mounted on. These two parts sit on top of a
-base where the NXT is mounted inside to distribute the weight and to make it
-shorter. On the front of this bas two ultrasonic sensor placed in order to make
-\name able to track and measure distance to a target. All of this sits on a
-turning mechanism. A motor is placed on the outside of the
-turret with a gear connected to the turning mechanism to make the whole turret
-turn. \fix{Add picture of the turret with arrows pointing to the various
+that pushes the projectile through a mouthpiece that clamps around it. The
+piston is mounted on an angling mechanism, which is positioned on top of
+the base. The NXT is mounted inside the base in order to distribute weight. Two
+ultrasonic sensors and a camera are positioned on the front of the base,
+allowing \name to track and measure the distance to a target. All of this sits
+on a turning mechanism. This mechanism consists cog connected to a motor which
+is placed onm the outside, allowing the base to turn.
+ \fix{Add picture of the turret with arrows pointing to the various
 parts}{}
 
 In the following subsections the design process and arguments for the
 design of each part will be presented.
 
-\subsection{Shooting Mechanism}
-When it comes to the shooting mechanism it needs to be able to shoot at least
-200 cm, as this is one of the requirements. This means that it needs a
-significant amount of power behind each shot. It also needs to be able to reload
-itself to make it have more than one chance of hitting the target. To make this
-a reality three different designs were considered:
+\subsection{Design of the Shooting Mechanism}
+The goal of the shooting mechanism is to be able to shoot at least
+200 cm, as this is one of the requirements. It thus needs a lot of power behind
+each shot. It also needs to be able to fire multiple times without reloading,
+which can allow to fire again if it misses. Three different design were
+considered:
 
 \begin{itemize}
   \item A ballista design
-  \item A spinning wheel design
+  \item A launcher design
   \item A piston design
 \end{itemize}
 
-The ballista design was considere because a balista is able to deliver a lot of
-power to each shot.
+The ballista design was considered as a ballista is able to deliver a lot of
+power with each shot.
 \figx[0.5]{ballista}{A sketch of the ballista design.} 
 This design was quickly dismissed, as while it can deliver a lot power to each
-shot, its rate of fire would be slow, as it would be slow to reload. This would
-mean that in case of a miss it would most likely not be able to try again.\nl
+shot, its rate of fire would be slow as it would be slow to reload. This would
+mean that in case it missed, it would most likely not be able to try again.\nl
 
-The spinning wheel was considered, since it is able to lauch projectile with
-great force and it can be reloaded. It utilizes the same principle as a tennis
-ball launcher, two wheels placed side by side spinning in opposite directions, with the projectile pushed through.
+The launcher was considered, since it is able to lauch projectiles quickly and
+with great force. It utilizes the same principle as a tennis ball launcher, two
+wheels placed side by side spinning in opposite directions, with the projectile
+pushed through.
 
 \figx[0.6]{tennisball}{A sketch of the spinning wheel design.} 
 
 When trying to build this design it was determined that the available motors was
-not powerfull enough to deliver the necessary momentum for launching a
-projectile, not even with a gearing. Another factor is that the wheels
+not powerful enough to deliver the necessary momentum for launching a
+projectile, not even with a gearing. Another problem is that the wheels
 available was made of soft rubber, which absorbs a lot of the force when the
-projectile is pushed through. For this Design to work the best the wheels
-need to be made of a hard material that does not absorb the force from the
+projectile is pushed through. For this design to work the better, the wheels
+would need to be made of a hard material that does not absorb the force from the
 motor and has a lot of friction, which makes it easier for the wheels to
 grip the projectile.\nl
 
-The piston design uses a piston that pushes the projectile
-trough a mouth piece that clamps around it. This means that until enough force
-has been applied to the projectile it is held in the mouth piece. When enough
-force has been applied by the piston, the projectile will be forced out at high
-speed.
+The piston design uses a piston that pushes the projectile trough a mouth piece
+that clamps around it. This means that until enough force has been applied to
+the projectile it is held in the mouth piece. When enough force has been
+applied by the piston, the projectile will be forced out at high speed.
 
 \figx[0.6]{piston}{A sketch of the piston design.}
 
 This design has several advantages, Lego Technic has a ball launcher which can
 store several small ball projectiles. This allows us to have an easily
-reloadable and fast firing cannon, which can hold up to 6 shots.\nl
+reloadable and fast firing cannon which can hold up to 6 shots.\nl
 
 Using this design a test to find how accurate it is at fireing the projectile
 to the expected distance was conducted.
