--- a/sections/Design/SystemArchitecture/SoftwareArch.tex
+++ b/sections/Design/SystemArchitecture/SoftwareArch.tex
@@ -1,1 +1,8 @@
-\section{Software Architecture}
+\section{Hardware and Software Architecture}
+
+In this section we will go through the hardware and the software architecture,
+this means that the different hardware and software layers will be explained. In
+\autoref{CallStack}, it can be seen how the calls through software is handled. 
+
+\figx[0.6]{CallStack}{The call stack from the software} 
+
