--- a/setup/macros.tex
+++ b/setup/macros.tex
@@ -96,7 +96,7 @@
 
 \newcommand{\say}[1]{\textit{``#1''}} 
 
-\newcommand{\textc}[1]{\textbf{\textit{``#1''}}} 
+\newcommand{\textc}[1]{\textbf{\textit{#1}}} 
 
 \newcommand{\names}{TS101s\
 }
